--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-fqterm (0.9.3+svn631-1) unstable; urgency=low
+fqterm (0.9.3+svn631-0ubuntu1) intrepid; urgency=low
 
-  * Initial release (Closes: 479367)
+  * initial snapshot.
 
- -- LI Daobing <lidaobing@gmail.com>  Mon, 13 Oct 2008 22:45:28 +0800
+ -- LI Daobing <lidaobing@gmail.com>  Sun, 19 Oct 2008 17:42:50 +0800
