--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 fqterm (0.9.3+svn631-0ubuntu1) intrepid; urgency=low
 
-  * initial snapshot.
+  * Initial Ubuntu package (LP: #242910)  
 
- -- LI Daobing <lidaobing@gmail.com>  Sun, 19 Oct 2008 17:42:50 +0800
+ -- LI Daobing <lidaobing@gmail.com>  Sun, 19 Oct 2008 17:58:14 +0800
