--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-fqterm (0.9.3+svn631-0ubuntu1) intrepid; urgency=low
+fqterm (0.9.3+svn631-0ubuntu1) jaunty; urgency=low
 
   * Initial Ubuntu package (LP: #285825)  
 
- -- LI Daobing <lidaobing@gmail.com>  Sun, 19 Oct 2008 20:24:05 +0800
+ -- LI Daobing <lidaobing@gmail.com>  Mon, 03 Nov 2008 22:47:33 +0800
