--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-fqterm (0.9.3+svn631-0ubuntu1~ppa2) intrepid; urgency=low
+fqterm (0.9.3+svn631-0ubuntu1) jaunty; urgency=low
 
   * Initial Ubuntu package (LP: #285825)  
 
- -- LI Daobing <lidaobing@gmail.com>  Thu, 20 Nov 2008 23:31:18 +0800
+ -- LI Daobing <lidaobing@gmail.com>  Thu, 20 Nov 2008 23:34:08 +0800
