--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fqterm (0.9.3+svn632-1) unstable; urgency=low
+
+  * Initial upload to Debian (closes: #439367)
+
+ -- LI Daobing <lidaobing@gmail.com>  Fri, 20 Feb 2009 21:22:23 +0800
+
 fqterm (0.9.3+svn632-0ubuntu1) jaunty; urgency=low
 
   * Initial Ubuntu package (LP: #285825)  
