--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fqterm (0.9.3+svn662-0ubuntu1) jaunty; urgency=low
+
+  * new upstream release.
+
+ -- LI Daobing <lidaobing@gmail.com>  Wed, 04 Mar 2009 19:54:46 +0800
+
 fqterm (0.9.3+svn632-1) unstable; urgency=low
 
   * Initial upload to Debian (closes: #439367)
