--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,11 @@ fqterm (0.9.3+svn666-1) unstable; urgency=low
     - debian/menu: added.
     - debian/fqterm.xpm: added, generated from res/pic/fqterm_128x128.png
     - debian/fqterm.install: added, install fqterm.xpm
+  * debian/control:
+    - change maintainer's email
+    - bump standards version to 3.8.1
 
- -- LI Daobing <lidaobing@gmail.com>  Sun, 29 Mar 2009 14:46:13 +0800
+ -- LI Daobing <lidaobing@debian.org>  Wed, 22 Apr 2009 19:15:26 +0800
 
 fqterm (0.9.3+svn632-0ubuntu1) jaunty; urgency=low
 
