--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fqterm (0.9.3+svn666-1ubuntu1) karmic; urgency=low
+
+  * debian/watch: added. 
+
+ -- LI Daobing <lidaobing@debian.org>  Tue, 09 Jun 2009 22:04:51 +0800
+
 fqterm (0.9.3+svn666-1) unstable; urgency=low
 
   * Initial upload to Debian (closes: #479367)
