--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -148,4 +148,11 @@ below to setup the development environment.
   get "QQWry.dat" from this project's home page or from other
   websites.
 
+7. Generate FQTerm Installer (Windows)
 
+  If you wish to install FQTerm to your system, please install NSIS and
+  compile FQTermNSIS.nsi. This will require some files in the right 
+  position. Please check FQTermNSIS.nsi and see the section Section 
+  "-CopyFiles".
+
+  
