--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ fqterm (0.9.4.4-1) unstable; urgency=low
 
   * New Upstream Version
   * debian/watch: updated. 
+  * debian/control: bump standards version to 3.8.3.
 
- -- LI Daobing <lidaobing@debian.org>  Thu, 24 Sep 2009 19:44:13 +0800
+ -- LI Daobing <lidaobing@debian.org>  Thu, 24 Sep 2009 19:49:04 +0800
 
 fqterm (0.9.3+svn666-1ubuntu1) karmic; urgency=low
 
