--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fqterm (0.9.5.2-1) unstable; urgency=low
+
+  * new upstream version.
+
+ -- LI Daobing <lidaobing@debian.org>  Wed, 11 Nov 2009 19:05:44 +0800
+
 fqterm (0.9.4.4-1) unstable; urgency=low
 
   * New Upstream Version
