--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 fqterm (0.9.5.2-1) unstable; urgency=low
 
   * new upstream version.
+  * Convert package to dpkg source format 3.0 (quilt) 
 
- -- LI Daobing <lidaobing@debian.org>  Wed, 11 Nov 2009 19:05:44 +0800
+ -- LI Daobing <lidaobing@debian.org>  Wed, 11 Nov 2009 19:19:43 +0800
 
 fqterm (0.9.4.4-1) unstable; urgency=low
 
