--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ fqterm (0.9.5.2-1) unstable; urgency=low
   * new upstream version.
   * Convert package to dpkg source format 3.0 (quilt) 
   * debian/patches/Hurd.diff: added, fix FTBFS in Hurd (Closes: #532368)
+  * debian/patches/binutils-gold.diff: fix FTBFS with binutils-gold
+    (Closes: #554409)
 
- -- LI Daobing <lidaobing@debian.org>  Wed, 11 Nov 2009 19:42:58 +0800
+ -- LI Daobing <lidaobing@debian.org>  Wed, 11 Nov 2009 20:02:48 +0800
 
 fqterm (0.9.4.4-1) unstable; urgency=low
 
