--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,11 @@ fqterm (0.9.5.2-1) unstable; urgency=low
   * debian/patches/Hurd.diff: added, fix FTBFS in Hurd (Closes: #532368)
   * debian/patches/binutils-gold.diff: fix FTBFS with binutils-gold
     (Closes: #554409)
+  * remove deprecated files:
+    - debian/patches/00list: delete.
+    - debian/patches/cmake.dpatch: delete.
 
- -- LI Daobing <lidaobing@debian.org>  Wed, 11 Nov 2009 20:02:48 +0800
+ -- LI Daobing <lidaobing@debian.org>  Wed, 11 Nov 2009 20:31:55 +0800
 
 fqterm (0.9.4.4-1) unstable; urgency=low
 
