--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 fqterm (0.9.6.3-1) unstable; urgency=low
 
   * new upstream version.
+    - debian/patches/Hurd.diff: removed.
+    - debian/patches/binutils-gold.diff: removed.
 
- -- LI Daobing <lidaobing@debian.org>  Wed, 25 Nov 2009 19:05:30 +0800
+ -- LI Daobing <lidaobing@debian.org>  Wed, 25 Nov 2009 19:12:06 +0800
 
 fqterm (0.9.5.2-1) unstable; urgency=low
 
