--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fqterm (0.9.6.8-1) unstable; urgency=low
+
+  * new upstream release.
+
+ -- LI Daobing <lidaobing@debian.org>  Sun, 21 Mar 2010 22:11:15 +0800
+
 fqterm (0.9.6.3-1) unstable; urgency=low
 
   * new upstream version.
