--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 fqterm (0.9.6.8-1) unstable; urgency=low
 
   * new upstream release.
+  * debian/control: bump standards version to 3.8.4.
 
- -- LI Daobing <lidaobing@debian.org>  Sun, 21 Mar 2010 22:11:15 +0800
+ -- LI Daobing <lidaobing@debian.org>  Sun, 21 Mar 2010 22:22:34 +0800
 
 fqterm (0.9.6.3-1) unstable; urgency=low
 
