--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fqterm (0.9.6.9-1) natty; urgency=low
+
+  * new upstream release. (closes: #558722, #643379)
+
+ -- LI Daobing <lidaobing@debian.org>  Wed, 28 Sep 2011 23:37:20 +0800
+
 fqterm (0.9.6.8-1) unstable; urgency=low
 
   * new upstream release.
