--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+fqterm (0.9.6.10-1.1) unstable; urgency=low
+
+  * Non maintainer upload.
+  * Fix build failure with GCC 4.7. Closes: #667169.
+
+ -- Matthias Klose <doko@debian.org>  Thu, 03 May 2012 23:33:18 +0200
+
 fqterm (0.9.6.10-1) unstable; urgency=low
 
   * new upstream release. (closes: #643710)
