--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ fqterm (0.9.8.3.r4+git20161029-1) unstable; urgency=medium
   * Fix Vcs-Git typo.
   * Switch buildsystem: cdbs -> debhelper v10.
   * Switch to build against Qt5.
+  * Add new upstream docs.
 
  -- Boyuan Yang <073plan@gmail.com>  Sat, 29 Oct 2016 15:58:36 +0800
 
